--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lispr"
+name = "skim-lisp"
 version = "0.1.0"
 authors = ["JonathanArns <jonathan.arns@googlemail.com>"]
 edition = "2018"
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "lispr"
+name = "skim"
 path = "src/lib.rs"
 
 [dependencies]
